<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">倍胜智能设备</string>
    <string name="str_setting">设置</string>
    <string name="data_usage_metered_wifi">WLAN网络</string>
    <string name="date_and_time">日期和时间设置</string>
    <string name="privacy_settings">重置设备</string>
    <string name="system_update">系统升级</string>
    <string name="device_info">设备信息</string>
    <string name="firmware_version">Android 版本</string>
    <string name="model_number">型号</string>
    <string name="baseband_version">基带版本</string>
    <string name="kernel_version">内核版本</string>
    <string name="build_number">版本号</string>
    <string name="rom_info">机身存储</string>
    <string name="ram_info">运行内存</string>
    <string name="cpu_info">处理器</string>
    <string name="default_date_format"><xliff:g id="default_date_format">MM/dd/yyyy</xliff:g></string>
    <string name="help_label">帮助</string>
    <string name="date_time_date_format">选择日期格式</string>
    <string name="date_time_24hour">使用 24 小时格式</string>
    <string name="date_time_set_time">设置时间</string>
    <string name="date_time_set_timezone">选择时区</string>
    <string name="date_time_set_date">设置日期</string>
    <string name="date_time_auto">"自动确定日期和时间"</string>
    <string name="date_time_auto_summaryOn">使用网络提供的时间</string>
    <string name="wifi_settings_category">WLAN 设置</string>
    <string name="privacy_settings_title">备份和重置</string>
    <string name="backup_section_title">备份和还原</string>
    <string name="backup_data_title">备份我的数据</string>
    <string name="backup_data_summary">将应用数据、WLAN 密码和其他设置备份到服务器</string>
    <string name="backup_configure_account_title">备份帐户</string>
    <string name="backup_configure_account_default_summary">目前没有帐户存储备份数据</string>
    <string name="auto_restore_title">自动还原</string>
    <string name="auto_restore_summary">重新安装某个应用后，系统会还原已经备份的设置和数据</string>
    <string name="personal_data_section_title">个人数据</string>
    <string name="master_clear_title">恢复出厂设置</string>
    <string name="master_clear_summary">清除设备上的所有数据</string>
    <string name="wireless_networks_settings_title">无线和网络</string>
    <string name="airplane_mode">飞行模式</string>
    <string name="nfc_quick_toggle_title">NFC</string>
    <string name="nfc_quick_toggle_summary">允许平板电脑在接触其他设备时交换数据</string>
    <string name="android_beam_settings_title">Android Beam</string>
    <string name="tether_settings_title_all">网络共享与便携式热点</string>
    <string name="cell_broadcast_settings">小区广播</string>
    <string name="proxy_settings_title">代理</string>
    <string name="nsd_quick_toggle_title">网络服务发现</string>
    <string name="nsd_quick_toggle_summary">允许其他设备上的应用发现此设备上的应用</string>
    <string name="wimax_settings">4G</string>
    <string name="manage_mobile_plan_title">手机套餐</string>
    <string name="network_settings_title">"移动网络"</string>
    <string name="vpn_settings_title">VPN</string>
    <string name="master_clear_gesture_prompt">绘制您的解锁图案</string>
    <string name="master_clear_gesture_explanation">您需要绘制解锁图案以确认要恢复出厂设置。</string>
    <string name="master_clear_confirm_title">要重置吗？</string>
    <string name="system_inint_reset_msg">系统初始化中，请稍后再试</string>
    <string name="wifi_tether_configure_subtext">"<xliff:g id="NETWORK_SSID">%1$s</xliff:g><xliff:g id="NETWORK_SECURITY">%2$s</xliff:g>便携式 WLAN 热点"</string>
    <string name="master_clear_desc">"此操作会清除您手机"<b>"内存设备"</b>"中的所有数据，包括：\n\n"<li>"系统及应用数据和设置"</li>\n<li>"已下载的应用"</li></string>
    <string name="master_clear_accounts">\n\n"目前，您已登录以下帐户：\n"</string>
    <string name="erase_external_storage">格式化 SD 卡</string>
    <string name="erase_external_storage_description">清除 SD 卡中的全部数据，例如音乐或照片</string>
    <string name="master_clear_button_text">重置设备</string>
    <string name="master_clear_desc_erase_external_storage">\n\n"要清除音乐、图片和其他用户数据，您需要清空该 "<b>"SD 卡"</b>"。"</string>
    <string name="backup_erase_dialog_message">要停止备份您的 WLAN 密码、书签、其他设置和应用数据，并清除服务器上的所有副本吗？</string>
    <string name="master_clear_final_desc">要清除所有个人信息和下载的应用吗？请注意，此操作无法撤消！</string>
    <string name="master_clear_final_button_text">清除全部内容</string>
    <string name="mobile_unknown_sim_operator">"未知的 SIM 运营商</string>
    <string name="mobile_no_provisioning_url">%1$s没有已知的配置网站</string>
    <string name="mobile_insert_sim_card">请插入 SIM 卡，然后重新启动</string>
    <string name="mobile_connect_to_internet">请连接到互联网</string>
    <string name="sms_application_title">默认短信应用</string>
    <string name="dongle_settings_title">加密狗</string>
    <string name="wifi_in_airplane_mode">正处于飞行模式下</string>
    <string name="wifi_error">"出错"</string>
    <string name="wifi_security_short_wep">WEP</string>
    <string name="wifi_security_short_wpa">WPA</string>
    <string name="wifi_security_short_wpa2">WPA2</string>
    <string name="wifi_security_short_wpa_wpa2">WPA/WPA2</string>
    <string name="wifi_security_short_psk_generic">@string/wifi_security_short_wpa_wpa2</string>
    <string name="wifi_security_short_eap">802.1x</string>
    <string name="wifi_security_wep">WEP</string>
    <string name="wifi_security_wpa">WPA PSK</string>
    <string name="wifi_security_wpa2">WPA2 PSK</string>
    <string name="wifi_security_wpa_wpa2">WPA/WPA2 PSK</string>
    <string name="wifi_security_psk_generic">@string/wifi_security_wpa_wpa2</string>
    <string name="wifi_security_eap">802.1x EAP</string>
    <string name="wifi_security_none">无</string>
    <string name="wifi_disabled_password_failure">密码错误</string>
    <string name="wifi_remembered">记住</string>
    <string name="wifi_disabled_generic">不可用</string>
    <string name="wifi_disabled_network_failure">网络错误</string>
    <string name="wifi_not_in_range">不在范围内</string>
    <string name="wifi_wps_available_first_item">可使用 WPS</string>
    <string name="wifi_wps_available_second_item">(可使用 WPS)</string>
    <string name="wifi_secured_first_item">通过 <xliff:g id="WIFI_SECURITY_SHORT">%1$s</xliff:g></string>
    <string name="wifi_secured_second_item">, 通过 <xliff:g id="WIFI_SECURITY_SHORT">%1$s</xliff:g></string>
    <string name="wifi_p2p_failed_rename_message">无法重命名设备。</string>
    <string name="wifi_p2p_peer_devices">对等设备</string>
    <string name="wifi_p2p_remembered_groups">已保存的群组</string>
    <string name="wifi_p2p_menu_searching">正在搜索…</string>
    <string name="wifi_p2p_menu_search">搜索设备</string>
    <string name="wifi_p2p_menu_rename">重命名设备</string>
    <string name="wifi_p2p_disconnect_multiple_message">如果断开连接，您与<xliff:g id="PEER_NAME">%1$s</xliff:g>和另外 <xliff:g id="PEER_COUNT">%2$s</xliff:g> 台设备的连接将中断。</string>
    <string name="wifi_p2p_failed_connect_message">无法连接。</string>
    <string name="wifi_p2p_disconnect_message">如果断开连接，您与<xliff:g id="PEER_NAME">%1$s</xliff:g>的连接将中断。</string>
    <string name="wifi_p2p_disconnect_title">断开连接？</string>
    <string name="dlg_ok">确定</string>
    <string name="dlg_cancel">取消</string>
    <string name="wifi_p2p_cancel_connect_message">要取消连接<xliff:g id="PEER_NAME">%1$s</xliff:g>的邀请吗？</string>
    <string name="wifi_p2p_cancel_connect_title">取消邀请？</string>
    <string name="wifi_p2p_delete_group_message">"取消保存此群组？"</string>
    <string name="wifi_unspecified">（未指定）</string>
    <string name="wifi_add_network">添加网络</string>
    <string name="wifi_save">保存</string>
    <string name="wifi_security">安全性</string>
    <string name="wifi_signal">信号强度</string>
    <string name="wifi_status">状态信息</string>
    <string name="wifi_speed">连接速度</string>
    <string name="proxy_url">PAC 网址： </string>
    <string name="wifi_connect">连接</string>
    <string name="wifi_failed_connect_message">无法连接网络</string>
    <string name="wifi_forget">取消保存</string>
    <string name="wifi_failed_forget_message">无法取消保存网络</string>
    <string name="wifi_failed_save_message">无法保存网络</string>
    <string name="wifi_cancel">取消</string>
    <string name="proxy_error_invalid_port">您键入的端口无效。</string>
    <string name="wifi_ssid">网络 SSID</string>
    <string name="wifi_ssid_hint">输入 SSID</string>
    <string name="wifi_ip_address">IP 地址</string>
    <string name="wifi_eap_method">EAP 方法</string>
    <string name="please_select_phase2">阶段 2 身份验证</string>
    <string name="wifi_eap_ca_cert">CA 证书</string>
    <string name="wifi_eap_user_cert">用户证书</string>
    <string name="wifi_eap_identity">身份</string>
    <string name="wifi_eap_anonymous">匿名身份</string>
    <string name="wifi_password">密码</string>
    <string name="wifi_show_password">显示密码</string>
    <string name="wifi_ip_settings">IP 设置</string>
    <string name="wifi_scan_always_confirm_allow">允许</string>
    <string name="wifi_scan_always_confirm_deny">拒绝</string>
    <string name="wifi_ip_address_hint">192.168.1.128</string>
    <string name="wifi_gateway_hint">192.168.1.1</string>
    <string name="wifi_network_prefix_length_hint">24</string>
    <string name="wifi_dns1_hint">8.8.8.8</string>
    <string name="wifi_dns2_hint">8.8.4.4</string>
    <string name="wifi_show_advanced">显示高级选项</string>
    <string name="wifi_wapi_user_certificate">用户认证</string>
    <string name="wifi_wapi_as_certificate">AS 认证</string>
    <string name="wifi_wapi_psk_type">密码类型</string>
    <string name="wifi_security_wapi_psk_ascii">WAPI PSK ASCII</string>
    <string name="wifi_security_wapi_psk_hexadecimal">WAPI PSK hexadecimal</string>
    <string name="wifi_security_wapi_psk">WAPI PSK</string>
    <string name="wifi_security_wapi_cert">WAPI CERT</string>
    <string name="wifi_setup_wizard_title">选择 WLAN</string>
    <string name="wifi_required_info_text">为完成设置，设备需要使用 WLAN 网络。</string>
    <string name="wifi_setup_skip">跳过</string>
    <string name="wifi_setup_next">下一步</string>
    <string name="wifi_setup_back">上一步</string>
    <string name="wifi_skip_anyway">还是跳过</string>
    <string name="wifi_dont_skip">不要跳过</string>
    <string name="wifi_empty_list_wifi_on">正在搜索 WLAN 网络…</string>
    <string name="wifi_stopping">正在关闭 WLAN…</string>
    <string name="cancel">取消</string>
    <string name="str_maohao">：</string>
    <string name="str_enumerateDevice">枚举设备</string>
    <string name="str_findInterface">搜索设备接口</string>
    <string name="str_openDevice">打开设备</string>
    <string name="str_assignEndpoint">设置端点</string>
    <string name="str_claimInterface">确定连接</string>
    <string name="str_findcard">寻卡</string>
    <string name="str_init_time">2018-04-16 12:12:12</string>
    <string name="str_sn_create_tip">扫码创建设备SN编号</string>
    <string name="str_welcome">欢迎使用</string>
    <string name="str_device_name">榕城补登设备</string>
    <string name="str_terminal_id">终端ID:</string>
    <string name="str_init_network">正在初始化网络...</string>
    <string name="str_init_network_ok">网络初始化成功</string>
    <string name="str_no_permitted_card">不允许补登充值的卡</string>
    <string name="str_get_main_dir_failure">选择主目录失败</string>
    <string name="str_get_son_dir_failure">选择子目录失败</string>
    <string name="str_card_not_distinguish">无法识别的卡</string>
    <string name="str_recharging">正在进行补充值</string>
    <string name="str_no_moving_card">请勿移动卡片</string>
    <string name="str_not_check_uncharge_order">未查询到待补登充值订单</string>
    <string name="str_useless_card">无效卡</string>
    <string name="str_recharge_success_balance">充值成功！  余额：</string>
    <string name="str_please_move_card">请移除卡片</string>
    <string name="str_error_code">错误码：</string>
    <string name="str_recharge_fail_please_retry_stick_card">充值失败 请贴卡重试！</string>
    <string name="str_unknow_error">未知错误</string>
    <string name="str_has_recharged">已经执行过补登操作</string>
    <string name="str_recharge_init_failure">圈存初始化失败</string>
    <string name="str_sunday">sunday</string>
    <string name="str_default"></string>
    <string name="str_card_no">卡号</string>
    <string name="str_balance">余额</string>
    <string name="str_amount_zero">0</string>
</resources>