<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="49dp">

        <ImageView
            android:id="@+id/back_iv"
            android:layout_width="49dp"
            android:layout_height="49dp"
            android:padding="12dp"
            android:layout_centerVertical="true"
            android:src="@drawable/back_icon" />


        <TextView
            android:id="@+id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/privacy_settings"
            android:textColor="@color/fontColor"
            android:textSize="16sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/master_clear_title"
        android:textColor="@color/fontColor"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/master_clear_desc"
        android:textColor="@color/fontColor"
        android:textSize="12sp" />


    <Button
        android:id="@+id/initiate_master_clear"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18dip"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@drawable/button_radius_bg"
        android:text="@string/master_clear_button_text" />


</LinearLayout>