<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="49dp">

        <ImageView
            android:id="@+id/back_iv"
            android:layout_width="49dp"
            android:layout_height="49dp"
            android:padding="12dp"
            android:src="@drawable/back_icon"
            android:layout_centerVertical="true"/>


        <TextView
            android:id="@+id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_and_time"
            android:textSize="16sp"
            android:layout_centerInParent="true"
            android:textColor="@color/fontColor"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp">
        <TextView
            android:id="@+id/date_time_auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_time_auto"
            android:textSize="14sp"
            android:textColor="@color/fontColor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_time_auto_summaryOn"
            android:textSize="12sp"
            android:textColor="@color/fontColor"
            android:layout_marginTop="3dp"
            android:layout_below="@id/date_time_auto"/>
        <com.bsit.pboard.view.SwitchView
            android:id="@+id/date_time_auto_iv"
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_color"
        android:layout_marginTop="5dp"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp">
        <TextView
            android:id="@+id/date_time_24hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_time_24hour"
            android:textSize="14sp"
            android:textColor="@color/fontColor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_time_auto_summaryOn"
            android:textSize="12sp"
            android:textColor="@color/fontColor"
            android:layout_marginTop="3dp"
            android:layout_below="@id/date_time_24hour"/>
        <com.bsit.pboard.view.SwitchView
            android:id="@+id/zdate_time_24hour_iv"
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_color"
        android:layout_marginTop="5dp"/>

    <RelativeLayout
        android:id="@+id/date_time_set_rl"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp">
        <TextView
            android:id="@+id/date_time_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_time_set_time"
            android:textSize="14sp"
            android:layout_centerVertical="true"
            android:textColor="@color/fontColor"/>
        <TextView
            android:id="@+id/date_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/fontColor"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_color"
        android:layout_marginTop="5dp"/>

</LinearLayout>