<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="49dp">

        <ImageView
            android:id="@+id/back_iv"
            android:layout_width="49dp"
            android:layout_height="49dp"
            android:padding="12dp"
            android:src="@drawable/back_icon"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_setting"
            android:textSize="16sp"
            android:layout_centerInParent="true"
            android:textColor="@color/fontColor"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color"/>


    <RelativeLayout
        android:id="@+id/wifi_setting_ll"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/icon_wlan"/>

        <TextView
            android:id="@+id/wif_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/fontColor"
            android:text="@string/data_usage_metered_wifi"
            android:layout_centerVertical="true"
            android:layout_marginLeft="50dp"/>

        <TextView
            android:id="@+id/connect_wif_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/fontColor"
            android:text="@string/data_usage_metered_wifi"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/wif_name_tv"/>

        <com.bsit.pboard.view.SwitchView
            android:id="@+id/swich_bt"
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color"/>

    <RelativeLayout
        android:id="@+id/data_time_ll"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/icon_date"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/fontColor"
            android:text="@string/date_and_time"
            android:layout_centerVertical="true"
            android:layout_marginLeft="50dp"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color"/>

    <RelativeLayout
        android:id="@+id/reset_ll"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/icon_reset"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/fontColor"
            android:text="@string/privacy_settings"
            android:layout_centerVertical="true"
            android:layout_marginLeft="50dp"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color"/>

    <RelativeLayout
        android:id="@+id/system_ll"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/icon_system"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/fontColor"
            android:text="@string/system_update"
            android:layout_centerVertical="true"
            android:layout_marginLeft="50dp"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color"/>

    <RelativeLayout
        android:id="@+id/device_info_ll"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/icon_device"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/fontColor"
            android:text="@string/device_info"
            android:layout_centerVertical="true"
            android:layout_marginLeft="50dp"/>
    </RelativeLayout>


</LinearLayout>