<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400px"
    android:layout_height="240px"
    android:background="@drawable/bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30px"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/date_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18px"
            android:textColor="@color/white"
            android:layout_marginRight="7px"
            android:layout_centerVertical="true"
            android:text="@string/str_init_time"/>

        <TextView
            android:id="@+id/week_day_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18px"
            android:layout_marginLeft="5dp"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/date_time_tv"
            android:text="sunday"/>

        <TextView
            android:id="@+id/right_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="21px"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginRight="20px"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/wimax_settings"/>

        <ImageView
            android:id="@+id/signal_intensity_iv"
            android:layout_width="27px"
            android:layout_height="21px"
            android:layout_centerVertical="true"
            android:layout_marginRight="7px"
            android:layout_toLeftOf="@id/right_tv"
            android:background="@drawable/signal_intensity0"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottom_rl"
        android:layout_width="match_parent"
        android:layout_height="40px"
        android:layout_alignParentBottom="true"
        android:visibility="visible">
        <!--<ImageView-->
            <!--android:layout_width="26px"-->
            <!--android:layout_height="20px"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_marginLeft="5px"-->
            <!--android:src="@drawable/icon_ka"/>-->

        <TextView
            android:id="@+id/tv_terminal_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16px"
            android:text="@string/str_terminal_id"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5px"
            android:textColor="@color/white"/>

        <!--<TextView-->
            <!--android:id="@+id/card_no_tv"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textSize="16px"-->
            <!--android:text="@string/str_init_time"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_marginLeft="66px"-->
            <!--android:textColor="@color/white"/>-->

        <TextView
            android:id="@+id/terminal_no_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16px"
            android:text=""
            android:layout_centerVertical="true"
            android:layout_marginLeft="66px"
            android:textColor="@color/white"/>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30px"
        android:layout_marginBottom="40px">
        <!--android:background="@drawable/bg2">-->


        <LinearLayout
            android:id="@+id/warnming_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                android:layout_width="24px"
                android:layout_height="wrap_content"
                android:src="@drawable/warning"/>

            <TextView
                android:id="@+id/warnming_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20px"
                android:textColor="@color/white"
                android:layout_marginLeft="5px"
                android:text="@string/dlg_ok"
                android:gravity="center"/>
        </LinearLayout>

        <include
            android:id="@+id/result_ll"
            layout="@layout/dialog_load"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/welcome_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableBottom="@drawable/sticking_card"
                />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/card_info_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:gravity="left"
            android:visibility="gone"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/icon_kahao"
                    android:text="卡号"
                    />
                <TextView
                    android:id="@+id/tv_card_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1111111111111111111"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/icon_yue"
                    android:text="余额"
                    />
                <TextView
                    android:id="@+id/tv_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1234"
                    />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>
